--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Titre de la page</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <title>ohmyfood</title>
+    <link rel="stylesheet" href="./public/css/style.css" />
   </head>
   <body>
     <header>
