--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Titre de la page</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
+    <link rel="stylesheet" href="./public/css/style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" rel="stylesheet"> 
+    <title>ohmyfood</title>
   </head>
   <body>
     <header>
-
+      <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
-
+    <section class="section-1">
+      <div class="section-1__header">
+        <i class="fas fa-map-marker-alt"></i>
+        <p>Paris, Belleville</p>
+      </div>
+      <div class="section-1__body">
+        <h1>Réservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <button>Explorer nos restaurants</button>
+      </div>
+    </section>
     <footer>
 
     </footer>
