--- a/index.html
+++ b/index.html
@@ -12,15 +12,77 @@
     <header>
       <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
-    <section class="section-1">
-      <div class="section-1__header">
+    <section class="section1">
+      <div class="section1__header">
         <i class="fas fa-map-marker-alt"></i>
         <p>Paris, Belleville</p>
       </div>
-      <div class="section-1__body">
+      <div class="section1__body">
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <button>Explorer nos restaurants</button>
+      </div>
+    </section>
+    <section class="section2">
+      <h2>Fonctionnement</h2>
+      <div class="section2__fonctionnement">
+        <span>1</span>
+        <i class="fas fa-mobile-alt"></i>
+        <p><strong>Choissez un restaurant</strong></p>
+      </div>
+      <div class="section2__fonctionnement">
+        <span>2</span>
+        <i class="fas fa-list-ul"></i>
+        <p><strong>Composez votre menu</strong></p>
+      </div>
+      <div class="section2__fonctionnement">
+        <span>3</span>
+        <i class="fas fa-store"></i>
+        <p><strong>Dégustez au restaurant</strong></p>
+      </div>
+    </section>
+    <section class="section3">
+      <h2>Restaurants</h2>
+      <div>
+        <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+        <div>
+          <span>
+            <h3>La palette du goût</h3>
+            <p>Ménilmontant</p>
+          </span>
+          <i class="far fa-heart"></i>
+      </div>
+      </div>
+      <div>
+        <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
+        <div>
+          <span>
+            <h3>La note enchantée</h3>
+            <p>Charonne</p>
+          </span>
+          <i class="far fa-heart"></i>
+          <i class="fas fa-heart"></i>
+      </div>
+      </div>
+      <div>
+        <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
+        <div>
+          <span>
+            <h3>À la française</h3>
+            <p>Cité Rouge</p>
+          </span>
+          <i class="far fa-heart"></i>
+      </div>
+      </div>
+      <div>
+        <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
+        <div>
+          <span>
+            <h3>Le délice des sens</h3>
+            <p>Folie_Méricourt</p>
+          </span>
+          <i class="far fa-heart"></i>
+      </div>
       </div>
     </section>
     <footer>
