--- a/index.html
+++ b/index.html
@@ -6,87 +6,98 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
     <link rel="stylesheet" href="./public/css/style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <title>ohmyfood</title>
   </head>
   <body>
     <header>
       <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
-    <section class="section1">
-      <div class="section1__header">
+    <section class="lieu">
+      <div class="lieu__header">
         <i class="fas fa-map-marker-alt"></i>
         <p>Paris, Belleville</p>
       </div>
-      <div class="section1__body">
+      <div class="lieu__body">
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <button>Explorer nos restaurants</button>
       </div>
     </section>
-    <section class="section2">
+    <section class="fonctionnement">
       <h2>Fonctionnement</h2>
-      <div class="section2__fonctionnement">
+      <div class="fonctionnement__div">
         <span>1</span>
         <i class="fas fa-mobile-alt"></i>
         <p><strong>Choissez un restaurant</strong></p>
       </div>
-      <div class="section2__fonctionnement">
+      <div class="fonctionnement__div">
         <span>2</span>
         <i class="fas fa-list-ul"></i>
         <p><strong>Composez votre menu</strong></p>
       </div>
-      <div class="section2__fonctionnement">
+      <div class="fonctionnement__div">
         <span>3</span>
         <i class="fas fa-store"></i>
         <p><strong>Dégustez au restaurant</strong></p>
       </div>
     </section>
-    <section class="section3">
+    <section class="restaurant">
       <h2>Restaurants</h2>
       <div>
-        <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
         <div>
           <span>
             <h3>La palette du goût</h3>
             <p>Ménilmontant</p>
           </span>
-          <i class="far fa-heart"></i>
+          <i class="far fa-heart heart-color1"></i>
+          <i class="fas fa-heart restaurant__heart"></i>
       </div>
       </div>
       <div>
-        <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
         <div>
           <span>
             <h3>La note enchantée</h3>
             <p>Charonne</p>
           </span>
-          <i class="far fa-heart"></i>
-          <i class="fas fa-heart"></i>
-      </div>
+            <i class="far fa-heart heart"></i>
+            <i class="fas fa-heart restaurant__heart"></i>
+        </div>
       </div>
       <div>
-        <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
+        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
         <div>
           <span>
             <h3>À la française</h3>
             <p>Cité Rouge</p>
           </span>
           <i class="far fa-heart"></i>
+          <i class="fas fa-heart restaurant__heart"></i>
       </div>
       </div>
       <div>
-        <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
         <div>
           <span>
             <h3>Le délice des sens</h3>
-            <p>Folie_Méricourt</p>
+            <p>Folie Méricourt</p>
           </span>
-          <i class="far fa-heart"></i>
-      </div>
+            <i class="far fa-heart"></i>
+            <i class="fas fa-heart restaurant__heart"></i>
+        </div>
       </div>
     </section>
-    <footer>
-
+    <footer class="footer">
+      <span class="footer__logo">ohmyfood</span>
+      <div>
+        <p><i class="fas fa-utensils"></i>&ensp; Proposer un restaurant</p>
+        <p><i class="fas fa-hands-helping"></i>&ensp;Devenir partenaire</p>
+        <p>Mentions légale</p>
+        <p>Contact</p>
+      </div>
     </footer>
   </body>
 </html>
