--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </section>
     <section class="restaurant">
       <h2>Restaurants</h2>
+      <a href="lapalettedugout.html" >
       <div>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
         <div>
@@ -54,8 +55,9 @@
           </span>
           <i class="far fa-heart heart-color1"></i>
           <i class="fas fa-heart restaurant__heart"></i>
+        </div>
       </div>
-      </div>
+    </a>
       <div>
         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
         <div>
