--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     <section class="restaurant">
       <h2>Restaurants</h2>
       <a href="lapalettedugout.html" >
-      <div>
+      <div class="restaurant__div">
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
-        <div>
-          <span>
+        <div class="">
+          <div>
             <h3>La palette du goût</h3>
             <p>Ménilmontant</p>
-          </span>
+          </div>
           <i class="far fa-heart heart-color1"></i>
           <i class="fas fa-heart restaurant__heart"></i>
         </div>
       </div>
     </a>
-      <div>
+      <div class="restaurant__div">
         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
         <div>
           <span>
@@ -69,7 +69,7 @@
             <i class="fas fa-heart restaurant__heart"></i>
         </div>
       </div>
-      <div>
+      <div class="restaurant__div">
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
         <div>
           <span>
@@ -80,7 +80,7 @@
           <i class="fas fa-heart restaurant__heart"></i>
       </div>
       </div>
-      <div>
+      <div class="restaurant__div">
         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
         <div>
           <span>
