--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <div class="restaurant__div">
         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
         <div>
-          <span>
+          <div>
             <h3>La note enchantée</h3>
             <p>Charonne</p>
-          </span>
+          </div>
             <i class="far fa-heart heart"></i>
             <i class="fas fa-heart restaurant__heart"></i>
         </div>
@@ -72,10 +72,10 @@
       <div class="restaurant__div">
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
         <div>
-          <span>
+          <div>
             <h3>À la française</h3>
             <p>Cité Rouge</p>
-          </span>
+          </div>
           <i class="far fa-heart"></i>
           <i class="fas fa-heart restaurant__heart"></i>
       </div>
@@ -83,10 +83,10 @@
       <div class="restaurant__div">
         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
         <div>
-          <span>
+          <div>
             <h3>Le délice des sens</h3>
             <p>Folie Méricourt</p>
-          </span>
+          </div>
             <i class="far fa-heart"></i>
             <i class="fas fa-heart restaurant__heart"></i>
         </div>
