--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -3,16 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
+    <link rel="stylesheet" href="./public/css/style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="./public/css/style.css" />
   </head>
   <body>
     <header>
-
+        <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
 
     <footer>
-
+      <span class="footer__logo">ohmyfood</span>
+      <div>
+        <p><i class="fas fa-utensils"></i>&ensp; Proposer un restaurant</p>
+        <p><i class="fas fa-hands-helping"></i>&ensp;Devenir partenaire</p>
+        <p>Mentions légale</p>
+        <p>Contact</p>
+      </div>
     </footer>
   </body>
 </html>
