font du disign sur la seconde page

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <h3>La palette du goût</h3>
             <p>Ménilmontant</p>
           </div>
-          <i class="far fa-heart heart-color1"></i>
-          <i class="fas fa-heart restaurant__heart"></i>
+          <i class="far fa-heart restaurant__heart"></i>
+          <i class="fas fa-heart restaurant__heart-like"></i>
         </div>
       </div>
     </a>
@@ -65,8 +65,8 @@
             <h3>La note enchantée</h3>
             <p>Charonne</p>
           </div>
-            <i class="far fa-heart heart"></i>
-            <i class="fas fa-heart restaurant__heart"></i>
+            <i class="far fa-heart restaurant__heart"></i>
+            <i class="fas fa-heart restaurant__heart-like"></i>
         </div>
       </div>
       <div class="restaurant__div">
@@ -76,8 +76,8 @@
             <h3>À la française</h3>
             <p>Cité Rouge</p>
           </div>
-          <i class="far fa-heart"></i>
-          <i class="fas fa-heart restaurant__heart"></i>
+          <i class="far fa-heart restaurant__heart"></i>
+          <i class="fas fa-heart restaurant__heart-like"></i>
       </div>
       </div>
       <div class="restaurant__div">
@@ -87,8 +87,8 @@
             <h3>Le délice des sens</h3>
             <p>Folie Méricourt</p>
           </div>
-            <i class="far fa-heart"></i>
-            <i class="fas fa-heart restaurant__heart"></i>
+            <i class="far fa-heart restaurant__heart"></i>
+            <i class="fas fa-heart restaurant__heart-like"></i>
         </div>
       </div>
     </section>
