--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
-    <link rel="stylesheet" href="./public/css/style.css"/>
+    <link rel="stylesheet" href="/public/css/style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,8 +14,51 @@
     <header>
         <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
+    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="lapalettedugoût" class="body__image">
+    <section class="la-palette-du-gout">
+      <h1 class="la-palette-du-gout__h1">La palette du goût <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
+      <div class="la-palette-du-gout__div">
+        <h2>ENTRÉES</h2>
+        <span></span>
+        <div>
 
-    <footer>
+        </div>
+        <div> 
+
+        </div>
+        <div> 
+
+        </div>
+      </div>
+      <div class="la-palette-du-gout__div">
+        <h2>PLATS</h2>
+        <span></span>
+        <div>
+
+        </div>
+        <div> 
+
+        </div>
+        <div> 
+
+        </div>
+      </div>
+      <div class="la-palette-du-gout__div">
+        <h2>DESSERTS</h2>
+        <span></span>
+        <div>
+
+        </div>
+        <div> 
+
+        </div>
+        <div> 
+
+        </div>
+      </div>
+      <button>Commander</button>
+    </section>
+    <footer class="footer">
       <span class="footer__logo">ohmyfood</span>
       <div>
         <p><i class="fas fa-utensils"></i>&ensp; Proposer un restaurant</p>
