rajout des paragraphe NOUVEAU sur le homme et rajout de leffet aparition sur les autres pages

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -20,40 +20,76 @@
       <div class="la-palette-du-gout__div">
         <h2>ENTRÉES</h2>
         <span></span>
-        <div>
-
+        <div class="delay-1 plat">
+          <div class="plat__text">
+            <h3>Fricassée d'escargot</h3>
+            <p>Au piment d'espelette</p>
+          </div>
+          <p class="plat__prix"><strong>25€</strong></p>
         </div>
-        <div> 
-
+        <div class="delay-2 plat">
+          <div class="plat__text">
+            <h3>Foie gras de canard mi-cuitt</h3>
+            <p>Et ses copeaux de truffe noire</p>
+          </div>
+          <p class="plat__prix"><strong>35€</strong></p>
         </div>
-        <div> 
-
+        <div class="delay-3 plat"> 
+          <div class="plat__text">
+            <h3>Oeuf au plat</h3>
+            <p>Assaisonné à la truffe sur le lit de caviar</p>
+          </div>
+          <p class="plat__prix"><strong>20€</strong></p>
         </div>
       </div>
       <div class="la-palette-du-gout__div">
         <h2>PLATS</h2>
         <span></span>
-        <div>
-
+        <div class="delay-4 plat">
+          <div class="plat__text">
+            <h3>Filet de boeuf aux herbes</h3>
+            <p>Accompagné de sa ribambelle de légumes jjjjjj22222jjj</p>
+          </div>
+          <p class="plat__prix"><strong>40€</strong></p>
         </div>
-        <div> 
-
+        <div class="delay-5 plat"> 
+          <div class="plat__text">
+            <h3>Parmentier de queue de boeuf</h3>
+            <p>À la truffe noire sur sa purée de panais</p>
+          </div>
+          <p class="plat__prix"><strong>35€</strong></p>
         </div>
-        <div> 
-
+        <div class="delay-6 plat"> 
+          <div class="plat__text">
+            <h3>Filet de Turbot</h3>
+            <p>Aux agrumes</p>
+          </div>
+          <p class="plat__prix"><strong>44€</strong></p>
         </div>
       </div>
       <div class="la-palette-du-gout__div">
         <h2>DESSERTS</h2>
         <span></span>
-        <div>
-
+        <div class="delay-7 plat">
+          <div class="plat__text">
+            <h3>Paris-Brest</h3>
+            <p>Revisité</p>
+          </div>
+          <p class="plat__prix"><strong>18€</strong></p>
         </div>
-        <div> 
-
+        <div class="delay-8 plat"> 
+          <div class="plat__text">
+            <h3>Macaron au chocolat d'exception</h3>
+            <p>Et glace à la vanille de Madagascar</p>
+          </div>
+          <p class="plat__prix"><strong>22€</strong></p>
         </div>
-        <div> 
-
+        <div class="delay-9 plat"> 
+          <div class="plat__text">
+            <h3>Mousse au chocolat</h3>
+            <p>Au piment d'espelette et à la truffe noire</p>
+          </div>
+          <p class="plat__prix"><strong>23€</strong></p>
         </div>
       </div>
       <button>Commander</button>
