--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
       <h2>Restaurants</h2>
       <a href="lapalettedugout.html" >
       <div class="restaurant__div">
+        <p class="nouveau">Nouveau</p>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
-        <div class="">
+        <div>
           <div>
             <h3>La palette du goût</h3>
             <p>Ménilmontant</p>
@@ -59,6 +60,7 @@
       </div>
     </a>
       <div class="restaurant__div">
+        <p class="nouveau">Nouveau</p>
         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
         <div>
           <div>
