--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <header>
+      <a href="index.html"><i class="fa-arrow-left fas header__arrow"></i></a>
         <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="lapalettedugoût" class="body__image">
