font entier de toute les pages

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -16,9 +16,9 @@
         <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="lapalettedugoût" class="body__image">
-    <section class="la-palette-du-gout">
-      <h1 class="la-palette-du-gout__h1">La palette du goût <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
-      <div class="la-palette-du-gout__div">
+    <section class="presentation">
+      <h1 class="presentation__h1">La palette du goût <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
+      <div class="presentation__div">
         <h2>ENTRÉES</h2>
         <span></span>
         <div class="delay-1 plat">
@@ -27,13 +27,19 @@
             <p>Au piment d'espelette</p>
           </div>
           <p class="plat__prix"><strong>25€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
         <div class="delay-2 plat">
           <div class="plat__text">
-            <h3>Foie gras de canard mi-cuitt</h3>
+            <h3>Foie gras de canard mi-cuit</h3>
             <p>Et ses copeaux de truffe noire</p>
           </div>
           <p class="plat__prix"><strong>35€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
         <div class="delay-3 plat"> 
           <div class="plat__text">
@@ -41,17 +47,23 @@
             <p>Assaisonné à la truffe sur le lit de caviar</p>
           </div>
           <p class="plat__prix"><strong>20€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
       </div>
-      <div class="la-palette-du-gout__div">
+      <div class="presentation__div">
         <h2>PLATS</h2>
         <span></span>
         <div class="delay-4 plat">
           <div class="plat__text">
             <h3>Filet de boeuf aux herbes</h3>
-            <p>Accompagné de sa ribambelle de légumes jjjjjj22222jjj</p>
+            <p>Accompagné de sa ribambelle de légumes</p>
           </div>
           <p class="plat__prix"><strong>40€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
         <div class="delay-5 plat"> 
           <div class="plat__text">
@@ -59,6 +71,9 @@
             <p>À la truffe noire sur sa purée de panais</p>
           </div>
           <p class="plat__prix"><strong>35€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
         <div class="delay-6 plat"> 
           <div class="plat__text">
@@ -66,9 +81,12 @@
             <p>Aux agrumes</p>
           </div>
           <p class="plat__prix"><strong>44€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
       </div>
-      <div class="la-palette-du-gout__div">
+      <div class="presentation__div">
         <h2>DESSERTS</h2>
         <span></span>
         <div class="delay-7 plat">
@@ -77,6 +95,9 @@
             <p>Revisité</p>
           </div>
           <p class="plat__prix"><strong>18€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
         <div class="delay-8 plat"> 
           <div class="plat__text">
@@ -84,6 +105,9 @@
             <p>Et glace à la vanille de Madagascar</p>
           </div>
           <p class="plat__prix"><strong>22€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
         <div class="delay-9 plat"> 
           <div class="plat__text">
@@ -91,6 +115,9 @@
             <p>Au piment d'espelette et à la truffe noire</p>
           </div>
           <p class="plat__prix"><strong>23€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
         </div>
       </div>
       <button>Commander</button>
