--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
       </div>
     </a>
+    <a href="lanoteenchantee.html" >
       <div class="restaurant__div">
         <p class="nouveau">Nouveau</p>
         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
@@ -71,6 +72,8 @@
             <i class="fas fa-heart restaurant__heart-like"></i>
         </div>
       </div>
+    </a>
+    <a href="alafrancaise.html" >
       <div class="restaurant__div">
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
         <div>
@@ -82,6 +85,8 @@
           <i class="fas fa-heart restaurant__heart-like"></i>
       </div>
       </div>
+    </a>
+    <a href="ledelicedessens.html" >
       <div class="restaurant__div">
         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
         <div>
@@ -93,6 +98,7 @@
             <i class="fas fa-heart restaurant__heart-like"></i>
         </div>
       </div>
+    </a>
     </section>
     <footer class="footer">
       <span class="footer__logo">ohmyfood</span>
