--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -3,16 +3,143 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
+    <link rel="stylesheet" href="./public/css/style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="./public/css/style.css" />
   </head>
   <body>
     <header>
-
+      <a href="index.html"><i class="fa-arrow-left fas header__arrow"></i></a>
+        <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
-
-    <footer>
-
+    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="lapalettedugoût" class="body__image">
+    <section class="presentation">
+      <h1 class="presentation__h1">La note enchantée <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
+      <div class="presentation__div">
+        <h2>ENTRÉES</h2>
+        <span></span>
+        <div class="delay-1 plat">
+          <div class="plat__text">
+            <h3>Ravioles de foie gras</h3>
+            <p>Accompagnés de leur créme à la truffe</p>
+          </div>
+          <p class="plat__prix"><strong>25€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+        <div class="delay-2 plat">
+          <div class="plat__text">
+            <h3>Caviar osciètre</h3>
+            <p>Sur blini à la farine de blé noir</p>
+          </div>
+          <p class="plat__prix"><strong>35€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+        <div class="delay-3 plat"> 
+          <div class="plat__text">
+            <h3>Homard et espuma de potiron</h3>
+            <p>Assaisonné à la truffe sur le lit de caviar</p>
+          </div>
+          <p class="plat__prix"><strong>20€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+        <div class="delay-4 plat"> 
+          <div class="plat__text">
+            <h3>Foie gras de canard cuit entier</h3>
+            <p>Confiture de figue et pain toastév</p>
+          </div>
+          <p class="plat__prix"><strong>35€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+      </div>
+      <div class="presentation__div">
+        <h2>PLATS</h2>
+        <span></span>
+        <div class="delay-5 plat">
+          <div class="plat__text">
+            <h3>Noix de coquilles Saint-Jacques</h3>
+            <p>Sur lit de purée de céleri-rave</p>
+          </div>
+          <p class="plat__prix"><strong>40€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+        <div class="delay-6 plat"> 
+          <div class="plat__text">
+            <h3>Langoustine poêlée</h3>
+            <p>Purée de patate douce</p>
+          </div>
+          <p class="plat__prix"><strong>35€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+        <div class="delay-7 plat"> 
+          <div class="plat__text">
+            <h3>Mijoté de queue de boeuf</h3>
+            <p>Et riz sauvage aux zestes de citron</p>
+          </div>
+          <p class="plat__prix"><strong>44€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+      </div>
+      <div class="presentation__div">
+        <h2>DESSERTS</h2>
+        <span></span>
+        <div class="delay-8 plat">
+          <div class="plat__text">
+            <h3>Macaron noisette et chocolat</h3>
+            <p>Glace au caramel brun et sel de Guérande</p>
+          </div>
+          <p class="plat__prix"><strong>18€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+        <div class="delay-9 plat"> 
+          <div class="plat__text">
+            <h3>Baba au rhum revisité</h3>
+            <p>Avec son coulis de citron</p>
+          </div>
+          <p class="plat__prix"><strong>22€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+        <div class="delay-10 plat"> 
+          <div class="plat__text">
+            <h3>Tarte au citron meringuée</h3>
+            <p>Déstructurée</p>
+          </div>
+          <p class="plat__prix"><strong>23€</strong></p>
+          <div class="confirmation">
+            <i class="fa-check fas confirmation__icon"></i>
+          </div>
+        </div>
+      </div>
+      <button>Commander</button>
+    </section>
+    <footer class="footer">
+      <span class="footer__logo">ohmyfood</span>
+      <div>
+        <p><i class="fas fa-utensils"></i>&ensp; Proposer un restaurant</p>
+        <p><i class="fas fa-hands-helping"></i>&ensp;Devenir partenaire</p>
+        <p>Mentions légale</p>
+        <p>Contact</p>
+      </div>
     </footer>
   </body>
 </html>
