--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -15,9 +15,9 @@
       <a href="index.html"><i class="fa-arrow-left fas header__arrow"></i></a>
         <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
-    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="lapalettedugoût" class="body__image">
+    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="lapalettedugoût" class="body__image">
     <section class="presentation">
-      <h1 class="presentation__h1">La palette du goût <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
+      <h1 class="presentation__h1">À la Francaise <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
       <div class="presentation__div">
         <h2>ENTRÉES</h2>
         <span></span>
