--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -15,7 +15,7 @@
       <a href="index.html"><i class="fa-arrow-left fas header__arrow"></i></a>
         <img src="images/logo/ohmyfood.png" alt="logo">
     </header>
-    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="lapalettedugoût" class="body__image">
+    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="lanoteenchantée" class="body__image">
     <section class="presentation">
       <h1 class="presentation__h1">La note enchantée <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
       <div class="presentation__div">
