reglage beug w3c et organisation sass

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -13,9 +13,9 @@
   <body>
     <header>
       <a href="index.html"><i class="fa-arrow-left fas header__arrow"></i></a>
-        <img src="images/logo/ohmyfood.png" alt="logo">
+        <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
-    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="lapalettedugoût" class="body__image">
+    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="lapalettedugoût" class="restaurant-body-img">
     <section class="presentation">
       <h1 class="presentation__h1">À la Francaise <i class="far fa-heart restaurant__heart"></i><i class="fas fa-heart restaurant__heart-like"></i></h1>
       <div class="presentation__div">
@@ -120,7 +120,7 @@
           </div>
         </div>
       </div>
-      <button>Commander</button>
+      <button class="boutton-restaurant">Commander</button>
     </section>
     <footer class="footer">
       <span class="footer__logo">ohmyfood</span>
