--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <img src="images/logo/ohmyfood.png" alt="logo">
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
     <section class="lieu">
       <div class="lieu__header">
@@ -22,7 +22,7 @@
       <div class="lieu__body">
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <button>Explorer nos restaurants</button>
+        <button class="boutton">Explorer nos restaurants</button>
       </div>
     </section>
     <section class="fonctionnement">
