font total du responsive tablette

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </section>
     <section class="restaurant">
       <h2>Restaurants</h2>
+      <div class="contenaire-restaurant">
       <a href="lapalettedugout.html" >
       <div class="restaurant__div">
         <p class="nouveau">Nouveau</p>
@@ -99,6 +100,7 @@
         </div>
       </div>
     </a>
+  </div>
     </section>
     <footer class="footer">
       <span class="footer__logo">ohmyfood</span>
