--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <title>ohmyfood</title>
   </head>
   <body>
+    <div class="loader">
+      <div class="loader__contenaire">
+        <div class="rond-1"></div>
+        <div class="rond-2"></div>
+        <div class="rond-3"></div>
+      </div>
+    </div>
     <header>
       <img src="images/logo/ohmyfood@2x.svg" alt="logo">
     </header>
@@ -108,7 +115,7 @@
         <p><i class="fas fa-utensils"></i>&ensp; Proposer un restaurant</p>
         <p><i class="fas fa-hands-helping"></i>&ensp;Devenir partenaire</p>
         <p>Mentions légale</p>
-        <p>Contact</p>
+        <a href="mailto:antoine.gremillet34@gmail.com"><p>Contact</p></a>
       </div>
     </footer>
   </body>
