--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -138,7 +138,7 @@
         <p><i class="fas fa-utensils"></i>&ensp; Proposer un restaurant</p>
         <p><i class="fas fa-hands-helping"></i>&ensp;Devenir partenaire</p>
         <p>Mentions légale</p>
-        <p>Contact</p>
+        <a href="mailto:antoine.gremillet34@gmail.com"><p>Contact</p></a>
       </div>
     </footer>
   </body>
